--- a/public/html/index.html
+++ b/public/html/index.html
@@ -40,9 +40,9 @@
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination">
-          <li class="page-item"><input class="page-link" value="Previous" id="prevPage">
+          <li class="page-item"><input class="page-link" value="Previous" id="prevPage" type="button">
           <li class="page-item"><a id='page'class="page-link" href="">1</a></li>          
-          <li class="page-item"><input class="page-link" value="Next" id="nextPage">
+          <li class="page-item"><input class="page-link" value="Next" id="nextPage" type="button">
         </ul>
       </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
