--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,8 +11,15 @@
     <title>Sales API</title>
 </head>
 <body>
-    <div>
-        Sales API
+    <div class="mainNav">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+            <a class="nav-link " id="home-tab" data-toggle="tab" href="#" role="tab" aria-controls="home" aria-selected="true">Michael Falconi</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link active" id="sales-tab" data-toggle="tab" href="#" role="tab" aria-controls="profile" aria-selected="false">Sales</a>
+            </li>        
+        </ul>      
     </div>
     <div id="mainTable">        
     <div class="container">
